[package]
name = "prometheus-http-query"
version = "0.8.3"
authors = ["Peter Sebastian Puetz <ppuetz@protonmail.com>"]
edition = "2021"
repository = "https://github.com/puetzp/prometheus-http-query"
documentation = "https://docs.rs/prometheus-http-query"
readme = "README.md"
license = "MIT"
description = "Prometheus HTTP API client"
keywords = [ "prometheus", "prometheus-http-api", "promql", "api", "reqwest" ]

[dependencies]
async-trait ={ version = "0.1.85", optional = true }
mime = "0.3"
reqwest = { version = "0.11.9", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
time = { version = "0.3", features = ["parsing", "macros", "serde"] }
enum-as-inner = "0.6.0"
reqwest-middleware = { version = "0.1.6", optional = true }
reqwest-retry = { version = "0.1.5", optional = true }
task-local-extensions = { version = "0.1.4", optional = true }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["reqwest/default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
middleware = ["dep:reqwest-middleware", "dep:reqwest-retry", "dep:async-trait", "dep:task-local-extensions"]
